# babylog

./: .gitignore  README.md  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: linter.yml  python-publish.yml  run-python-tests.yml
protobuf/: build_protobuf.sh
protobuf/src/: babylog_stream.proto
python/: README.md  pyproject.toml  requirements.txt  setup.py
python/demo/: demo.py
python/examples/: babylog_yolov8.ipynb  sample_pubsub.py  sample_usage.py  sample_viewing.py
python/resources/: babylog.config.yaml  config.yaml
python/src/babylog/: __init__.py  babylog.py  config.py  data_utils.py  deserialize.py  logger.py  pubsub.py  utils.py
python/src/babylog/protobuf/: __init__.py  babylog_stream_pb2.py  babylog_stream_pb2.pyi
python/tests/: __init__.py  test_deserialize.py
resources/: config.yaml
