[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "babylog_BABYLONAI"
version = "1.0.0"
authors = [
  { name="BabylonAI, Inc.", email="support@babylonai.dev" },
  { name="Ahmad Roumie", email="ahmad@babylonai.dev"},
  { name="Rangel Milushev", email="rangel@babylonai.dev" },
]
description = "A lightweight library for logging image and prediction data for your ML and computer vision models in production."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/thebabylonai/babylog"
"Bug Tracker" = "https://github.com/thebabylonai/babylog/issues"